[package]
authors = ["Jonathan Speiser <jspeis@gmail.com>"]
edition = "2018"
name = "tesseract-postgres"
version = "0.1.0"

[dependencies]
tokio-postgres = "0.3.0"
failure = "0.1.2"
futures = "0.1.25"
log = "0.4.3"
tokio-core = "0.1"
tokio-tcp = { version = "0.1", optional = true }
tokio-timer = { version = "0.2", optional = true }

futures-state-stream = "0.2"
futures-cpupool = { version = "0.1", optional = true }
lazy_static = { version = "1.0", optional = true }

[dependencies.tesseract-core]
path = "../tesseract-core"

[dev-dependencies]
tokio = "0.1.7"

[features]
default = ["runtime"]
runtime = ["tokio-tcp", "tokio-timer", "tokio-uds", "futures-cpupool", "lazy_static"]

[target.'cfg(unix)'.dependencies]
tokio-uds = { version = "0.2", optional = true }
